wip add route and forms check PATCH DO TESTS and DELETE

--- a/food_decision/templates/base.html
+++ b/food_decision/templates/base.html
@@ -11,7 +11,7 @@
         <div>
             Test:
             <a href="{{ url_for('index') }}">Home</a>
-            <a href="{{ url_for('add') }}">Add recipe</a>
+            <a href="{{ url_for('add_recipe') }}">Add recipe</a>
         </div>
         <hr>
         {% with messages = get_flashed_messages() %}
