--- a/food_decision/templates/recipe.html
+++ b/food_decision/templates/recipe.html
@@ -14,7 +14,7 @@
         </ul>
         <h2>Number of persons:</h2>
         <p>{{recipe.persons}}</p>
-        <h2>Recipe ingredient:</h2>
+        <h2>Recipe ingredients:</h2>
         <p>{{recipe.ingredients['ingredient']}}</p>
         <p>{{recipe.ingredients['quantity']}}</p>
 
