--- a/food_decision/templates/recipe.html
+++ b/food_decision/templates/recipe.html
@@ -18,5 +18,6 @@
         <p>{{recipe.ingredients['ingredient']}}</p>
         <p>{{recipe.ingredients['quantity']}}</p>
 
+        <a href="{{ url_for('add_ingredient', recipe_id=recipe.id) }} ">Add ingredient</a>
     </div>
 {% endblock %}
